# loneboth-ai

./: Cargo.toml  README.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  GETTING_STARTED.md  README.md  api.md  architecture.md
examples/: comprehensive_demo.rs
src/: adaptation.rs  algorithms.rs  behavior.rs  coordination.rs  coordination_old.rs  core.rs  environment.rs  gpu.rs  inference.rs  lib.rs  main.rs  training.rs  verification.rs
src/algorithm/: mod.rs
src/coordination/: mod.rs
src/gpu/: mod.rs
src/runtime/: mod.rs
src/verification/: mod.rs
tests/: integration_tests.rs
