[package]
name = "loneboth_ai"
version = "0.1.0"
edition = "2021"
description = "AI framework for individual and group coordination with GPU acceleration"
license = "MIT OR Apache-2.0"
authors = ["nanaisisi <131863615+nanaisisi@users.noreply.github.com>"]
repository = "https://github.com/nanaisisi/loneboth_ai"
readme = "README.md"
keywords = ["ai", "machine-learning", "gpu", "coordination"]
categories = ["science", "algorithms"]

[lib]
name = "loneboth_ai"
path = "src/lib.rs"

[[bin]]
name = "loneboth_ai"
path = "src/main.rs"

[dependencies]
# Burn framework for ML training and inference
burn = { version = "0.18.0", features = ["train", "std", "candle", "wgpu"] }
burn-candle = "0.18.0"
burn-wgpu = "0.18.0"
burn-dataset = "0.18.0"
burn-train = "0.18.0"
burn-core = "0.18.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Metrics and monitoring
tracing = "0.1"
tracing-subscriber = "0.3"

# Random number generation
rand = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"
