[package]
name = "loneboth-ai"
version = "0.1.0"
edition = "2021"
description = "AI framework for individual and group coordination with GPU acceleration"
license = "MIT OR Apache-2.0"
authors = ["nanaisisi <131863615+nanaisisi@users.noreply.github.com>"]
repository = "https://github.com/nanaisisi/loneboth-ai"
readme = "README.md"
keywords = ["ai", "machine-learning", "gpu", "coordination"]
categories = ["science", "algorithms"]

[lib]
name = "loneboth-ai"
path = "src/lib.rs"

[[bin]]
name = "loneboth-ai"
path = "src/main.rs"

[dependencies]
# Burn framework for ML training and inference
burn = { version = "*", features = ["train", "std", "candle", "wgpu"] }
burn-candle = "*"
burn-wgpu = "*"
burn-dataset = "*"
burn-train = "*"
burn-core = "*"

# Async runtime
tokio = { version = "*", features = ["full"] }

# Serialization
serde = { version = "*", features = ["derive"] }
serde_json = "*"

# Metrics and monitoring
tracing = "*"
tracing-subscriber = "*"

# Random number generation
rand = "*"

# Error handling
anyhow = "*"
thiserror = "*"
